--- a/index.html
+++ b/index.html
@@ -146,6 +146,15 @@
 		I've contributed various core rules to Stylelint and improved general performance by ±30%.
 	</p>
 
+	<hr>
+
+	<h2>Mr. Henry</h2>
+
+	<p>
+		Lead developer for most of the software projects at Mr. Henry.<br>
+		As a generalist I am involved in almost every aspect of the work we do.
+	</p>
+
 	<h2>Past stuff</h2>
 
 	<p>
