--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 	</p>
 
 	<p>
-		I am fascinated by things that are slow, broken or unpredictable.<br>
+		Fascinated by things that are slow, broken or unpredictable.<br>
 		This spans technical area's but also includes things like processes and workflows.
 	</p>
 
@@ -66,13 +66,13 @@
 	<h3>Polyfill.io</h3>
 
 	<p>
-		I redefined how polyfills are tested for <a href="https://polyfill.io/v3/">polyfill.io</a>.<br>
+		Redefined how polyfills are tested for <a href="https://polyfill.io/v3/">polyfill.io</a>.<br>
 		Originally polyfills were tested only in isolation, which led to various bugs when polyfills interacted.<br>
 		I also fixed most of the bugs that were surfaced by these new tests.
 	</p>
 
 	<p>
-		I contributed various polyfills to <a href="https://polyfill.io/v3/">polyfill.io</a> and still help to maintain it.
+		Contributed various polyfills to <a href="https://polyfill.io/v3/">polyfill.io</a> and still help to maintain it.
 	</p>
 
 	<h4>core-web</h4>
@@ -86,14 +86,14 @@
 	<h3>Browser Compat</h3>
 
 	<p>
-		I am a regular contributor to <a href="https://github.com/mdn/browser-compat-data">MDN Browser Compat Data.</a>.<br>
+		Regular contributor to <a href="https://github.com/mdn/browser-compat-data">MDN Browser Compat Data.</a>.<br>
 		I also created <a href="https://github.com/mrhenry/web-tests">web-tests</a> as a way to quickly gather historical support
 		data for various web features.
 	</p>
 
 	<p>
 		I am critical of MDN/Google Baseline and will keep advocating for something better and less biased.<br>
-		I maintain an alternative (<a href="https://github.com/romainmenke/mdn-support-context#mdn-support-context">mdn-support-context</a>) to illustrate that something better is technically possible.
+		As a counter example I maintain (<a href="https://github.com/romainmenke/mdn-support-context#mdn-support-context">mdn-support-context</a>) to illustrate that something better is technically possible.
 	</p>
 
 	<hr>
@@ -115,7 +115,7 @@
 	<h4>CSS Color</h4>
 
 	<p>
-		I created implementations for <a href="https://www.w3.org/TR/css-color-4/">css-color-4</a> and <a href="https://www.w3.org/TR/css-color-5/">css-color-5</a>.
+		Created implementations for <a href="https://www.w3.org/TR/css-color-4/">css-color-4</a> and <a href="https://www.w3.org/TR/css-color-5/">css-color-5</a>.
 
 		<ul>
 			<li>worked together with the editors to improve these specifications</li>
@@ -128,7 +128,7 @@
 	<h4>CSS Tokenizer and Parsers</h4>
 
 	<p>
-		I created a correct CSS tokenizer and various parsers.
+		Created a correct CSS tokenizer and various parsers.
 
 		<ul>
 			<li><a href="https://github.com/csstools/postcss-plugins/tree/main/packages/css-tokenizer">CSS tokenizer</a></li>
@@ -143,7 +143,7 @@
 	<h4>Stylelint</h4>
 
 	<p>
-		I've contributed various core rules to Stylelint and improved general performance by ±30%.
+		Contributed various core rules to Stylelint and improved general performance by ±30%.
 	</p>
 
 	<hr>
@@ -158,7 +158,7 @@
 	<h2>Past stuff</h2>
 
 	<p>
-		I studied photography and worked for several years <a href="/photography/">taking portraits and creating advertisements</a>.
+		Studied photography and worked for several years <a href="/photography/">taking portraits and creating advertisements</a>.
 	</p>
 </body>
 </html>
