--- a/index.html
+++ b/index.html
@@ -100,18 +100,6 @@
 
 	<h3>CSS</h3>
 
-	<h4>PostCSS Preset Env</h4>
-
-	<p>
-		I took over maintenance for <a href="https://preset-env.cssdb.org/">PostCSS Preset Env</a> (together with <a href="https://antonio.laguna.es">Antonio Laguna</a>).<br>
-		<ul>
-			<li>migrated everything to a monorepo</li>
-			<li>resolved all open issues and bug reports</li>
-			<li>massively increased test coverage</li>
-			<li>automated the release process</li>
-		</ul>
-	</p>
-
 	<h4>CSS Color</h4>
 
 	<p>
@@ -122,6 +110,23 @@
 			<li>contributed various new tests and fixes to WPT</li>
 			<li>released these tools as PostCSS plugins</li>
 			<li>still advocating for browser vendors to implement these features correctly</li>
+		</ul>
+	</p>
+
+	<h4>Media Queries</h4>
+
+	<p>
+		Advocated for media queries as a broad focus area for <a href="https://web.dev/interop-2023/">interop 2023</a>.<br>
+		I added various tests to WPT to illustrate the various interop issues and gaps in implementations.
+	</p>
+
+	<p>
+		Improved support for modern media query features in various developer tools.
+
+		<ul>
+			<li><a href="https://github.com/csstools/postcss-plugins/tree/main/packages/media-query-list-parser">media query parser</a></li>
+			<li>improved support for media <a href="https://github.com/csstools/postcss-plugins/tree/main/plugins/postcss-media-minmax#readme">range syntax in PostCSS</a></li>
+			<li>improved static analysis of media queries in <a href="https://stylelint.io/user-guide/rules/media-query-no-invalid/">Stylelint</a></li>
 		</ul>
 	</p>
 
@@ -138,6 +143,18 @@
 		</ul>
 
 		These tools drive much of the new PostCSS plugins and are also used in projects like Stylelint.
+	</p>
+
+	<h4>PostCSS Preset Env</h4>
+
+	<p>
+		I took over maintenance for <a href="https://preset-env.cssdb.org/">PostCSS Preset Env</a> (together with <a href="https://antonio.laguna.es">Antonio Laguna</a>).<br>
+		<ul>
+			<li>migrated everything to a monorepo</li>
+			<li>resolved all open issues and bug reports</li>
+			<li>massively increased test coverage</li>
+			<li>automated the release process</li>
+		</ul>
 	</p>
 
 	<h4>Stylelint</h4>
