--- a/index.html
+++ b/index.html
@@ -163,6 +163,12 @@
 		Contributed various core rules to Stylelint and improved general performance by ±30%.
 	</p>
 
+	<h4>VSCode</h4>
+
+	<p>
+		Contributed various features to the built-in CSS language support.
+	</p>
+
 	<hr>
 
 	<h2>Mr. Henry</h2>
