--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 	<h3>Browser Compat</h3>
 
 	<p>
-		Regular contributor to <a href="https://github.com/mdn/browser-compat-data">MDN Browser Compat Data.</a>.<br>
+		Regular contributor to <a href="https://github.com/mdn/browser-compat-data">MDN Browser Compat Data.</a><br>
 		I also created <a href="https://github.com/mrhenry/web-tests">web-tests</a> as a way to quickly gather historical support
 		data for various web features.
 	</p>
