--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 		<ul>
 			<li>worked together with the editors to improve these specifications</li>
 			<li>contributed various new tests and fixes to WPT</li>
-			<li>released these tools as PostCSS plugins</li>
+			<li>created PostCSS transpilation plugins based on these implementations</li>
 			<li>still advocating for browser vendors to implement these features correctly</li>
 		</ul>
 	</p>
