--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@
 
 	<p>
 		Advocated for media queries as a broad focus area for <a href="https://web.dev/interop-2023/">interop 2023</a>.<br>
-		I added various tests to WPT to illustrate the various interop issues and gaps in implementations.
+		I added various tests to WPT to illustrate the various interop issues and gaps in implementations.<br>
+		This was accepted and all browsers now have greatly improved support for media queries.
 	</p>
 
 	<p>
