--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
 </head>
 <body>
 	<h1>Romain Menke</h1>
-	<p>Fixes things, mostly with code</p>
+	<p style="font-style: italic;">Fixes things, mostly with code</p>
+
+	<hr>
+
+	<p>Find me here:</p>
 
 	<ul>
 		<li>
@@ -39,9 +43,6 @@
 		</li>
 		<li>
 			<a href="https://bsky.app/profile/romainmenke.bsky.social">Bluesky</a>
-		</li>
-		<li>
-			<a href="https://twitter.com/romainmenke">Twitter</a>
 		</li>
 		<li>
 			<a href="https://www.linkedin.com/in/romainmenke/">LinkedIn</a>
@@ -56,49 +57,18 @@
 
 	<p>
 		Fascinated by things that are slow, broken or unpredictable.<br>
-		This spans technical area's but also includes things like processes and workflows.
+		This spans technical area's but also includes things like human processes and workflows.
 	</p>
 
 	<hr>
 
-	<h2>Notable stuff</h2>
-
-	<h3>Polyfill.io</h3>
-
-	<p>
-		Redefined how polyfills are tested for <a href="https://polyfill.io/v3/">polyfill.io</a>.<br>
-		Originally polyfills were tested only in isolation, which led to various bugs when polyfills interacted.<br>
-		I also fixed most of the bugs that were surfaced by these new tests.
-	</p>
-
-	<p>
-		Contributed various polyfills to <a href="https://polyfill.io/v3/">polyfill.io</a> and still help to maintain it.
-	</p>
-
-	<h4>core-web</h4>
-
-	<p>
-		I maintain <a href="https://github.com/mrhenry/core-web">core-web</a>, which is the same set of polyfills from polyfill.io, but injected through babel.<br>
-	</p>
-
-	<hr>
-
-	<h3>Browser Compat</h3>
-
-	<p>
-		Regular contributor to <a href="https://github.com/mdn/browser-compat-data">MDN Browser Compat Data.</a><br>
-		I also created <a href="https://github.com/mrhenry/web-tests">web-tests</a> as a way to quickly gather historical support
-		data for various web features.
-	</p>
-
-	<p>
-		I am critical of MDN/Google Baseline and will keep advocating for something better and less biased.<br>
-		As a counter example I maintain (<a href="https://github.com/romainmenke/mdn-support-context#mdn-support-context">mdn-support-context</a>) to illustrate that something better is technically possible.
-	</p>
-
-	<hr>
+	<h2>Things</h2>
 
 	<h3>CSS</h3>
+
+	<h4>W3C Invited Expert</h4>
+
+	<p>As a result of my work on CSS Color specifications I became an invited expert at the W3C for the CSS WG.</p>
 
 	<h4>CSS Color</h4>
 
@@ -106,7 +76,7 @@
 		Created implementations for <a href="https://www.w3.org/TR/css-color-4/">css-color-4</a> and <a href="https://www.w3.org/TR/css-color-5/">css-color-5</a>.
 
 		<ul>
-			<li>worked together with the editors to improve these specifications</li>
+			<li>worked together with the specification editors to improve the specification texts</li>
 			<li>contributed various new tests and fixes to WPT</li>
 			<li>created PostCSS transpilation plugins based on these implementations</li>
 			<li>still advocating for browser vendors to implement these features correctly</li>
@@ -134,7 +104,7 @@
 	<h4>CSS Tokenizer and Parsers</h4>
 
 	<p>
-		Created a correct CSS tokenizer and various parsers.
+		Created a specification compliant CSS tokenizer and various parsers.
 
 		<ul>
 			<li><a href="https://github.com/csstools/postcss-plugins/tree/main/packages/css-tokenizer">CSS tokenizer</a></li>
@@ -158,6 +128,19 @@
 		</ul>
 	</p>
 
+	<h4>CSS Bundlers</h4>
+	
+	<p>
+		Created a specification compliant CSS bundler around @import and a shared test suite to drive interop between CSS bundlers.
+	
+	<ul>
+		<li><a href="https://github.com/csstools/postcss-plugins/tree/main/plugin-packs/postcss-bundler">A CSS bundler for PostCSS</a></li>
+		<li><a href="https://github.com/romainmenke/css-import-tests">tests for CSS bundlers</a></li>
+	</ul>
+	
+		The test suite has also helped others like esbuild in finding and resolving various bugs.
+	</p>
+
 	<h4>Stylelint</h4>
 
 	<p>
@@ -172,6 +155,47 @@
 
 	<hr>
 
+	<h3>polyfill-library</h3>
+	
+	<p>
+		Redefined how polyfills are tested for <a href="https://github.com/mrhenry/polyfill-library">polyfill-library</a>.<br>
+		Originally polyfills were tested only in isolation, which led to various bugs when polyfills interacted.<br>
+		I also fixed most of the bugs that were surfaced by these new tests.
+	</p>
+	
+	<p>
+		Contributed various polyfills to <a href="https://github.com/mrhenry/polyfill-library">polyfill-library</a> and still
+		help to maintain it.
+	</p>
+	
+	<h4>core-web</h4>
+	
+	<p>
+		I maintain <a href="https://github.com/mrhenry/core-web">core-web</a>, which is the same set of polyfills from
+		polyfill-library, but injected through babel.<br>
+	</p>
+	
+	<hr>
+	
+	<h3>Browser Compat</h3>
+	
+	<p>
+		Regular contributor to <a href="https://github.com/mdn/browser-compat-data">MDN Browser Compat Data.</a><br>
+		I also created <a href="https://github.com/mrhenry/web-tests">web-tests</a> as a way to quickly gather historical
+		support
+		data for various web features.
+	</p>
+	
+	<p>
+		I advocated for something less biased and more inclusive than the first iteration of MDN/Google Baseline.<br>
+		As part of this work I interacted with the community group to share my insights both as the maintainer of countless
+		polyfills and as a web developer with a specific focus on supporting older browser versions.<br>
+		The current definition (30 months since interop) aligns much more closely with end user needs and is much more
+		inclusive.
+	</p>
+
+	<hr>
+
 	<h2>Mr. Henry</h2>
 
 	<p>
@@ -179,7 +203,7 @@
 		As a generalist I am involved in almost every aspect of the work we do.
 	</p>
 
-	<h2>Past stuff</h2>
+	<h2>Past things</h2>
 
 	<p>
 		Studied photography and worked for several years <a href="/photography/">taking portraits and creating advertisements</a>.
